--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,10 @@
   max-width: 80%;
   margin: 5rem auto;
 }
+
+@media (max-width: 600px) {
+  .App {
+    max-width: 90%;
+    margin: 2rem auto;
+  }
+}
