--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -22,15 +22,12 @@ h2 {
 
 img {
   max-width: 40%;
-  display: block;
-  -webkit-filter: grayscale(100%);
-  /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
+  /* display: block; */
 }
 
 .d-flex {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
 }
 
@@ -71,4 +68,54 @@ img {
 .btn-contact:hover {
   background-color: #000;
   color: #fff;
+}
+
+/* MEDIA QUERIES */
+
+/* Medium Devices */
+@media (max-width: 800px) {
+  .column img {
+    max-width: 49.50%;
+  }
+}
+
+/* Small Devices */
+@media (max-width: 600px) {
+  .d-flex {
+    display: block;
+  }
+
+  h1 {
+    font-size: 2.4rem;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+  }
+
+  img {
+    max-width: 100%;
+    margin-bottom: 2rem;
+  }
+
+  .intro {
+    padding-left: 0;
+    font-size: 1.2rem;
+    font-weight: 200;
+  }
+
+  .btn-projects,
+  .btn-contact {
+    margin-left: 0;
+    padding: 10px 0;
+  }
+
+  .btn-contact {
+    margin-left: .2rem;
+  }
+
+  .btn-wrapper a {
+    display: inline-block;
+    width: 49%;
+    text-align: center;
+  }
+
 }
