--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,6 +1,6 @@
 .section-project {
-  margin-top: 4rem;
-  margin-bottom: 4rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 h2 {
@@ -14,7 +14,7 @@ h2 {
   position: relative;
   text-transform: uppercase;
   display: block;
-  top: 45px;
+  top: 65px;
   text-align: center;
   color: #f4f4f4;
   z-index: -10;
@@ -41,9 +41,19 @@ h2 {
     max-width: 49.50%;
   }
 
+  .section-project {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
   .bg-project {
     font-size: 5rem;
-    top: 30px;
+    top: 60px;
+  }
+
+  h2 {
+    margin-bottom: 5rem !important;
+    font-weight: bold !important;
   }
 }
 
@@ -55,17 +65,17 @@ h2 {
   }
 
   .section-project {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 
   .bg-project {
     font-size: 3rem;
-    top: 30px;
+    top: 45px;
   }
 
   h2 {
-    margin-bottom: 3rem;
+    margin-bottom: 3rem !important;
     font-size: 2.5rem;
   }
 }
