--- a/src/components/HeroImage/HeroImage.css
+++ b/src/components/HeroImage/HeroImage.css
@@ -1,12 +1,13 @@
 h2 {
   font-size: 2rem;
+  font-weight: bold !important;
 }
 
 img {
   max-width: 40%;
 }
 
-.d-flex {
+.display-flex {
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -18,6 +19,7 @@ img {
   font-size: 2rem;
   font-family: 'Work Sans', sans-serif;
   font-weight: 500;
+  line-height: 1.2;
 }
 
 .btn-projects {
@@ -59,15 +61,14 @@ img {
     max-width: 49.50%;
   }
 
-
   .intro {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
 }
 
 /* Small Devices */
 @media (max-width: 600px) {
-  .d-flex {
+  .display-flex {
     display: block;
   }
 
@@ -80,6 +81,7 @@ img {
     padding-left: 0;
     font-size: 1.3rem;
     font-weight: 200;
+    line-height: 1.3;
   }
 
   .btn-projects,
