--- a/src/components/HeroImage/HeroImage.css
+++ b/src/components/HeroImage/HeroImage.css
@@ -27,7 +27,7 @@ img {
   padding: 10px 40px;
   background-color: #000;
   color: #fff;
-  text-decoration: none;
+  text-decoration: none !important;
   font-size: 1.2rem;
   border: 1px solid #000;
 }
@@ -44,7 +44,7 @@ img {
   color: #000;
   border: 1px solid #000;
   font-size: 1.2rem;
-  text-decoration: none;
+  text-decoration: none !important;
   transition: all .2s ease-in-out;
 }
 
