--- a/src/components/TechSkills/TechSkills.css
+++ b/src/components/TechSkills/TechSkills.css
@@ -78,6 +78,7 @@ ul li {
   .bg-skills {
     font-size: 3rem;
     top: 45px;
+    /* line-height: 1 !important; */
   }
 
   .section-skills {
@@ -92,8 +93,8 @@ ul li {
   }
 
   h2 {
-    margin-bottom: 3rem;
-    font-size: 2.5rem;
+    margin-bottom: 3rem !important;
+    font-size: 2rem !important;
     font-weight: bold !important;
   }
 
